--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>People entered:</h1>
+        <div class="box">
+        <h1>Number Of Dolls Sold:</h1>
         <h2 id="count-el">0</h2>
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
         <button id="save-btn" onclick="save()">SAVE</button>
@@ -11,5 +12,6 @@
         <script src="index.js">
             nnerText
         </script>
+        </div>  
     </body>
 </html>
